--- a/templates/components/roll-collab-mod.hbs
+++ b/templates/components/roll-collab-mod.hbs
@@ -1,10 +1,17 @@
 <span class="roll-mod-container">
-  <span class="roll-mod shadowed cat-{{case "lower" cat}} status-{{case "lower" data.status}} {{~#if data.tooltip}} tooltip-trigger{{/if}}{{~#if data.sideString}} roll-mod-sidestring{{/if}}{{~#if data.modType}} roll-mod-{{case "lower" data.modType}}{{/if}}" {{~#if (test "Toggle" "in" data.status)}}
-    data-action="toggle" data-type="{{type}}" data-cat="{{cat}}" data-name="{{name}}"{{/if}}>{{name}}{{#if data.sideString}}:{{/if}}</span>
-  {{#if data.tooltip}}
-  <div class="tooltip tooltip-small tooltip-left tooltip-roll-mod">{{{data.tooltip}}}</div>
+  <span
+    class="roll-mod shadowed posneg-{{posNeg}} status-{{case "lower" status}} {{~#if tooltip}} tooltip-trigger{{/if}}{{~#if sideString}} roll-mod-sidestring{{/if}}{{~#if modType}} roll-mod-{{modType}}{{/if}}"
+    data-action="{{#if (test @root.isGM "||" (test "Toggle" "in" status))}}toggle{{/if}}"
+    data-status="{{status}}"
+    data-pos-neg="{{posNeg}}"
+    data-cat="{{category}}"
+    data-name="{{name}}"
+  >{{name}}{{#if sideString}}:{{/if}}</span>
+
+  {{#if tooltip}}
+  <div class="tooltip tooltip-small tooltip-left tooltip-roll-mod">{{{tooltip}}}</div>
   {{/if}}
-  {{#if data.sideString}}
-  <span class="roll-mod-side-string shadowed">{{{data.sideString}}}</span>
+  {{#if sideString}}
+  <span class="roll-mod-side-string shadowed">{{{sideString}}}</span>
   {{/if}}
 </span>
