--- a/templates/roll/partials/roll-collab-downtime.hbs
+++ b/templates/roll/partials/roll-collab-downtime.hbs
@@ -225,7 +225,7 @@
             <div>0</div>
             <div>1</div>
             <div>2</div>
-            <div class="center-box">3</div>
+            <div class="origin-box">3</div>
             <div>4</div>
             <div data-active="true">5</div>
             <div>6</div>
@@ -234,7 +234,7 @@
             <div>0</div>
             <div data-active="true">1</div>
             <div>2</div>
-            <div class="center-box">3</div>
+            <div class="origin-box">3</div>
             <div>4</div>
             <div>5</div>
             <div>6</div>
